RESOLVED FIXED307208
[JSC] Fix non-unified builds
https://bugs.webkit.org/show_bug.cgi?id=307208
Summary [JSC] Fix non-unified builds
Adrian Perez
Reported 2026-02-06 15:26:59 PST
This picks the bits needed from the patch for bug #304707 to get JavaScriptCore built non-unified.
Attachments
Adrian Perez
Comment 1 2026-02-06 15:31:22 PST
EWS
Comment 2 2026-02-07 15:54:10 PST
Committed 307014@main (cde67df1e4ba): <https://commits.webkit.org/307014@main> Reviewed commits have been landed. Closing PR #58083 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-07 15:55:12 PST
Note You need to log in before you can comment on or make changes to this bug.