Source/JavaScriptCore/wasm/debugger/WasmModuleManager.cpp
@@ -30,6 +30,7 @@
 
 WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 
+#include "HeapCellInlines.h"
 #include "JSWebAssemblyInstance.h"
 #include "JSWebAssemblyModule.h"
 #include "VM.h"
